--- a/imdex.html
+++ b/imdex.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
 
-    123...
+    <div class="container hero">
+        <div class="row">
+            hero
+        </div>      
+    </div>
+
+    <main class="container">        
+        <div class="row">
+            Content
+        </div>
+    </main>
+
+    <footer class="container">      
+        <div class="row">
+           Footer 
+        </div>
+    </footer>
     
 </body>
 </html>
